syntax = "proto3";
package apis;
option go_package = "./";

service RankService{
  rpc Register(PersonalInformation)returns(PersonalInformation){}
  rpc Update(PersonalInformation)returns(PersonalInformationFatRate){}
  rpc GetFatRate(PersonalInformation)returns(PersonalRank){}
  rpc GetTop(null)returns(Ranks){}//------------->有问题

  rpc RegisterPersons(stream PersonalInformation)returns(PersonalInformationList){}
  rpc WatchPersons(null)returns(stream PersonalInformation){}
}
message null {}

message Ranks{//------------->有问题
  repeated PersonalRank personalRanks=1;
}

message PersonalRank{
  string name=1;
  string sex=2;
  int64 rankNumber=3;
  float fatRate=4;
}

message PersonalInformationFatRate{
  string name=1;
  float fatRate=2;
}

message PersonalInformationList{
  repeated PersonalInformation items=1;
}

message PersonalInformation {
  //@gotags:gorm:"primaryKey;column:id"
  int64 id=1;
  //@gotags:gorm:"column:name"
  string name = 2;
  //@gotags:gorm:"column:sex"
  string sex = 3;
  //@gotags:gorm:"column:tall"
  float tall = 4;
  //@gotags:gorm:"column:weight"
  float weight = 5;
  //@gotags:gorm:"column:age"
  int64 age =6;
}